Fix subscriber history, statistics, and GUI encoding